--- a/doanasp/doanasp/appsettings.json
+++ b/doanasp/doanasp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Eshop": "Server=DESKTOP-22D3F5C;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
