--- a/doanasp/doanasp/appsettings.json
+++ b/doanasp/doanasp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Eshop": "Server=DESKTOP-22D3F5C;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Shop": "Server=DESKTOP-22D3F5C;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
