--- a/doanasp/doanasp/appsettings.json
+++ b/doanasp/doanasp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DAShop": "Server=DESKTOP-LTL9NMM\\SQLEXPRESS;Database=DAShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DAShop": "Server=DESKTOP-22D3F5C;Database=DAShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
