--- a/doanasp/doanasp/doanasp.csproj
+++ b/doanasp/doanasp/doanasp.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\img\user_images\" />
     <Folder Include="wwwroot\img\product\" />
   </ItemGroup>
 
